--- a/feed.html
+++ b/feed.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <div class="topnav">
-        <a href="home.php">Home</a>
-        <a href="products.php">Products</a>
-        <a class="active"  href="feed.php">Feedback</a>
+        <a href="home.html">Home</a>
+        <a href="products.html">Products</a>
+        <a class="active"  href="feed.html">Feedback</a>
     </div>
     <div class="bodd">
         <div class="container">
