--- a/home.html
+++ b/home.html
@@ -8,9 +8,9 @@
 
 <body>
         <div class="topnav">
-            <a class="active" href="home.php">Home</a>
-            <a href="products.php">Products</a>
-            <a href="feed.php">Feedback</a>
+            <a class="active" href="home.html">Home</a>
+            <a href="products.html">Products</a>
+            <a href="feed.html">Feedback</a>
         </div>
 
       <div class="title">
