--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <div class="container">
-    <a href="home.php"> 
+    <a href="home.html"> 
      <img src="image/bot.png" >
     </a>
   </div>
