--- a/submitted.html
+++ b/submitted.html
@@ -20,7 +20,7 @@
 
             <h2>Are you sure you would like to send this feedback?</h2>
             <br>
-            <button onclick="myFunction(); document.location.href='home.html'">Submit</button>
+            <button onclick="myFunction(); document.location.href='index.html'">Submit</button>
 
             <script>
                 function myFunction() {
