--- a/feed.html
+++ b/feed.html
@@ -19,7 +19,7 @@
         <div class="container">
 
             <?php ?>
-            <form action="submitted.html">
+            <form action="submitted.php">
           
               <label for="name">Name</label>
               <input type="text" id="name" name="name" placeholder="Your name.." maxlength="50">
